crates/pg_syntax/tests/snapshots/postgres_regress/float4@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2147483520'::float4::int4;"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    TypeCast@7..33
      TypeCast@7..27
        AConst@7..19
          Sconst@7..19 "'2147483520'"
        Typecast@19..21 "::"
        TypeName@21..27
          Ident@21..27 "float4"
      Typecast@27..29 "::"
      TypeName@29..33
        Ident@29..33 "int4"
  Ascii59@33..34 ";"

