crates/pg_syntax/tests/snapshots/postgres_regress/float4@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-2147483900'::float4::int4;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      TypeCast@7..28
        AConst@7..20
          Sconst@7..20 "'-2147483900'"
        Typecast@20..22 "::"
        TypeName@22..28
          Ident@22..28 "float4"
      Typecast@28..30 "::"
      TypeName@30..34
        Ident@30..34 "int4"
  Ascii59@34..35 ";"

