crates/pg_syntax/tests/snapshots/postgres_regress/float4@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '9223369837831520256'::float4::int8;"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    TypeCast@7..42
      TypeCast@7..36
        AConst@7..28
          Sconst@7..28 "'9223369837831520256'"
        Typecast@28..30 "::"
        TypeName@30..36
          Ident@30..36 "float4"
      Typecast@36..38 "::"
      TypeName@38..42
        Ident@38..42 "int8"
  Ascii59@42..43 ";"

