crates/pg_syntax/tests/snapshots/postgres_regress/float4@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-9223372036854775808.5'::float4::int8;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    TypeCast@7..45
      TypeCast@7..39
        AConst@7..31
          Sconst@7..31 "'-9223372036854775808.5'"
        Typecast@31..33 "::"
        TypeName@33..39
          Ident@33..39 "float4"
      Typecast@39..41 "::"
      TypeName@41..45
        Ident@41..45 "int8"
  Ascii59@45..46 ";"

